feat: Enhance ASR model path resolution and add PersonaPlex option in model picker

--- a/NvidiaVoiceAgent/wwwroot/index.html
+++ b/NvidiaVoiceAgent/wwwroot/index.html
@@ -550,6 +550,7 @@
             <select id="modelPicker">
                 <option value="tinyllama">TinyLlama 1.1B (fast)</option>
                 <option value="phi3">Phi-3 Mini 3.8B (better)</option>
+                <option value="personaplex">PersonaPlex 7B (TTS+LLM)</option>
             </select>
         </div>
         <div class="mode-toggle">
